# supply_chain_security_nyu

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  artifact.bundle  artifact.md  cyclonedx-sbom.json  main.py  merkle_proof.py  pyproject.toml  requirements.txt  sbom-attestation.bundle  tools.txt  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
supply_chain_security_nyu/: main.py  merkle_proof.py  util.py
tests/: test_all.py
